--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,7 @@
-== README
+== Web学习网
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+* 首页: 项目展示, 博客推荐
 
-Things you may want to cover:
+* 工具下载: 提供常用工具下载
 
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+* 互动讨论: 社区性质, 发帖, 评论, 用户积分排行
